--- a/Terminale/S02-Probabilités-Conditionnelles/FA3-S02-ProbaCondi-Formule.tex
+++ b/Terminale/S02-Probabilités-Conditionnelles/FA3-S02-ProbaCondi-Formule.tex
@@ -113,4 +113,25 @@ On interroge au hasard un client de l'agence ayant souscrit à une formule week-
 \end{enu}
 \end{exercice}
 
+\begin{exercice}[4][Le problème de Monty Hall]
+Un jeu télévisé propose aux candidats de choisir une porte parmi trois : derrière l'une se trouve une voiture (gain), et derrière les deux autres se cachent des chèvres (pertes). Une fois le choix effectué, l'animateur, qui sait où se trouve la voiture, ouvre une des deux portes restantes, révélant une chèvre. Le candidat a alors la possibilité de rester avec son choix initial ou de changer pour l'autre porte.
+
+On note :
+\begin{itemize}
+\item \( A \) : l'événement que le candidat a initialement choisi la
+  porte avec la voiture.
+\item   \( B \) : l'événement que le candidat change
+  de porte après qu'une chèvre a été révélée.
+\end{itemize}
+
+\begin{enu}
+\item Quelle est la probabilité que le candidat ait initialement choisi la porte avec la voiture, \( P(A) \) ?
+\item Quelle est la probabilité que l'animateur ouvre une porte avec une chèvre après le choix du candidat, sachant qu'il a choisi la porte avec la voiture, \( P(B|A) \) ?
+\item Quelle est la probabilité que l'animateur ouvre une porte avec une chèvre après le choix du candidat, sachant qu'il a choisi une porte avec une chèvre, \( P(B|\overline{A}) \) ?
+\item En utilisant la formule de Bayes, calculez la probabilité que le candidat gagne la voiture en changeant de porte, sachant qu'une chèvre a été révélée, \( P(A|B) \).
+\item Que recommanderiez-vous au candidat : de rester avec son choix initial ou de changer de porte ? Justifiez votre réponse en vous appuyant sur les probabilités calculées.
+\end{enu}
+\end{exercice}
+
+
 \end{document}
