5eme S02 cours exos

--- a/Cinquieme/S02-Calculs-avec-fractions/FM-S02-Calculs-avec-fractions.tex
+++ b/Cinquieme/S02-Calculs-avec-fractions/FM-S02-Calculs-avec-fractions.tex
@@ -74,4 +74,123 @@ Sous forme décimale, certaines fractions sont des entiers.
   \item $\dfrac{19}{1}=19$
   \end{enu}
 \end{exemple}
+
+\section{Fractions égales}
+
+\subsection{Multiplication}
+\begin{propriete}
+Dans une fraction, on peut multiplier le numérateur et
+le dénominateur par un même nombre, la fraction reste égale.
+\end{propriete}
+
+\begin{exemple}
+$\dfrac{5}{9}=\dfrac{5 \times 10}{9 \times 10}=\dfrac{50}{90}$
+\end{exemple}
+
+\subsection{Division}
+\begin{propriete}
+Dans une fraction, on peut diviser le numérateur et
+le dénominateur par un même nombre, la fraction reste égale.
+\end{propriete}
+
+\begin{exemple}
+$\dfrac{18}{42}=\dfrac{18 \div 6}{42 \div 6}=\dfrac{3}{7}$
+\end{exemple}
+
+\subsection{Simplification}
+\begin{definition}
+Simplifier une fraction c'est trouver un nombre par lequel diviser le
+numérateur et le dénominateur pour qu'ils soient le plus petit possible.
+\end{definition}
+
+\begin{exemple}
+$\dfrac{25}{35}=\dfrac{5 \times 5}{7 \div 5}=\dfrac{5}{7}$ \\ \\
+\textit{(On dit que l'on simplifie par 5, on ''enlève'' un facteur 5
+au numérateur et au dénominateur.)}
+\end{exemple}
+
+\section{Comparaisons et encadrements}
+
+\subsection{Comparer}
+\begin{definition}
+\textbf{Comparer} deux nombres (entiers ou décimaux), c'est dire s'ils sont supérieurs, inferieurs ou égaux.
+\end{definition}
+
+\begin{remarque}
+On utilise les symboles : $>$ ; $<$ et $=$
+\end{remarque}
+\newpage
+\begin{exercice}[0][Comparer deux nombres décimaux]
+\textbf{Comparer 14,59 et 14,521}
+\begin{enu}
+\item Comparer les parties entières : 14=14
+\item Comparer le chiffre des dixièmes : 5=5
+\item Comparer le chiffre des centièmes : 9>2
+\item Conclure : 9>2 donc 14,59>14,521
+\end{enu}
+\end{exercice}
+
+\subsection{Ranger}
+\begin{definition}
+  Ranger des nombres :
+  \begin{enu}
+  \item Dans l'ordre \textbf{croissant}, c'est les ranger du plus
+    petit au plus grand ;
+  \item Dans l'ordre \textbf{décroissant}, c'est les ranger du plus
+    grand au plus petit.
+  \end{enu}
+\end{definition}
+
+\begin{exemple}
+Ranger les nombres suivants dans l'ordre croissant :\\
+  \hfill $85\,349$ \hfill  ;  \hfill $85\,943$ \hfill ;  \hfill $8\,767$  \hfill ;  \hfill $83\,549$  \hfill ; \hfill  $85\,967$ \hfill  ;  \hfill $166\,083$ \hfill \\
+  Les nombres rangés dans l'ordre {\bfseries croissant} : $8\,767$ $<$
+  $83\,549$ $<$ $85\,349$ $<$ $85\,943$ $<$ $85\,967$ $<$ $166\,083$
+\end{exemple}
+
+\subsection{Encadrer}
+
+\begin{definition}
+\textbf{Encadrer} un nombre (entier ou décimal), c'est trouver un
+  nombre inférieur et un nombre supérieur à ce nombre.
+\end{definition}
+
+
+\begin{exercice}[0][Encadrer un nombre décimal]
+  \begin{enumerate}
+  \item \textit{Donner un encadrement à l'unité de 72,46}
+    \begin{enu}
+    \item 72 est inférieur à 72,46
+    \item 73 supérieur à 72,46
+    \item Un encadrement à l'unité est donc 72<72,46<73
+    \end{enu}
+    
+  \item \textit{Donner un encadrement au dixième ($\frac{1}{10}$) de
+    103,7}
+    \begin{enu}
+    \item 103,8 est supérieur à 103,7
+    \item 103,6 est inférieur à 103,7
+    \item Un encadrement au dixième ($\frac{1}{10}$) est donc
+      103,6<103,7<103,8
+    \end{enu}
+  \end{enumerate}
+\end{exercice}
+\newpage
+\subsection{Intercaler}
+\begin{definition}
+  \textbf{Intercaler} un nombre entre deux nombres décimaux donnés,
+  c'est trouver un nombre compris entre ces deux nombres.
+\end{definition}
+
+\begin{propriete}
+On peut toujours intercaler un nombre décimal entre deux nombres décimaux.
+\end{propriete}
+
+\begin{exemple}[Compléter avec un nombre décimal.]
+  \begin{enu}
+  \item $19{,}99<19{,}995<20$
+  \item $9{,}201<9{,}3<9{,}7$
+  \end{enu}
+\end{exemple}
+
 \end{document}
