--- a/Premiere/S02-Dérivation-I/FM-S02-Dérivation-I.tex
+++ b/Premiere/S02-Dérivation-I/FM-S02-Dérivation-I.tex
@@ -2,6 +2,10 @@
 
 \usepackage{mathdoc}
 
+
+%% Numéro de séquence %% Titre de la séquence %%
+\renewcommand{\centerhead}{Chap. 2 : Dérivation I}
+
 \begin{document}
 
 \setlength{\parindent}{0cm} 
@@ -95,6 +99,10 @@ où $\Delta y$ représente la variation des ordonnées et $\Delta x$ représente
 $$f'(a)=\lim_{h\to0}\frac{f(a+h)-f(a)}{h}$$
 \end{definition}
 
+\begin{remarque}
+   On note aussi la dérivée $f'(a)$ comme la limite suivante :
+$$f'(a)=\lim_{x\to a}\frac{f(x)-f(a)}{x-a}$$
+\end{remarque}
 
 \begin{propriete}[Interprétation géométrique]
   Si une fonction $f$ est dérivable en $a$, alors $f'(a)$ est la pente de la
@@ -132,6 +140,17 @@ Donc $f$ est dérivable en $1$ et $f'(1)=2$
 La \underline{tangente} $T_a$ en à la courbe $C_f$ en $a$ a pour équation :
 $$T_a : y=f'(a)(x-a)+f(a)$$
 \end{propriete}
+
+\begin{demonstration}
+\begin{center}
+  \begin{tabular}{p{0.3cm}l!{=}l}
+    &  $f'(x)$ & $\dfrac{f(x)-f(a)}{x-a}$ \\
+    & $f'(x)+\dfrac{f(a)}{x-a}$& $\dfrac{f(x)}{x-a}$ \\
+    &   $f(x)$ & $f'(x)(x-a)+\dfrac{f(a)(x-a)}{x-a}$ \\
+    &   $f(x)$ & $f'(x)(x-a)+f(a)$ \\
+  \end{tabular}
+\end{center}
+\end{demonstration}
 
 \begin{exemple}
    Soit $f(x)=x^2+2$. Déterminer l'équation de la tangente en $0$ et en $-1$
