--- a/Premiere/S02-Dérivation-I/FA-04-S02-Tangente.tex
+++ b/Premiere/S02-Dérivation-I/FA-04-S02-Tangente.tex
@@ -13,30 +13,28 @@
 
 \begin{document}
 
-\begin{exercice}[1][Consigne]
+\begin{exercice}[3][Touver l'équation de la tangente en $a$]
   \begin{multicols}{3}
     \begin{enu}
-    \item $f(x) = 3x + 2$
-    \item $f(x) = x^5$
-    \item $f(x) = -7x + 2$
-    \item $f(x) = -5x + 7$
-    \item $f(x) = 3$
-    \item $f(x) = x$
-    \item $f(x) = - x + 5$
-    \item $f(x) = 5x - 5$
-    \item $f(x) = x^4$
-    \item $f(x) = - x$
-    \item $f(x) = \sin(x)$
-    \item $f(x) = x^7$
-    \item $f(x) = 3 - 12x$
-    \item $f(x) = \cos(x)$
-    \item $f(x) = -7$
-    \item $f(x) = 8 + x$
+    \item $f(x) = 3x + 2$ en $a=4$
+    \item $f(x) = -7x + 2$ en $a=3$
+    \item $f(x) = -5x + 7$ en $a=2$
+    \item $f(x) = 3$ en $a=10~000$
+    \item $f(x) = x$ en $a=16$
+    \item $f(x) = - x + 5$ en $a=-3$
+    \item $f(x) = 5x - 5$ en $a= -4$
+    \item $f(x) = x^2$ en $a=-2$
+    \item $f(x) = - x$ en $a=-1$
+    \item $f(x) = 3 - 12x$ en $a=10$
+    \item $f(x) = -7$ en $a=-0,097$
+    \item $f(x) = 8 + x$ en $a=-8$
     \end{enu}
   \end{multicols}
 \end{exercice}
 
-\begin{exercice}[1][Consigne]
+\newpage
+
+\begin{exercice}[1][Calculer $f'(x)$]
   \begin{multicols}{3}
     \begin{enu}
     \item $f(x) = 5x + x^3$
