--- a/Cinquieme/S03-Angles/DS-01-S03-test.tex
+++ b/Cinquieme/S03-Angles/DS-01-S03-test.tex
@@ -13,13 +13,18 @@
 \renewcommand{\baselinestretch}{1}
 \setlength{\parindent}{0pt}
 
-\phantom{0}
-\vspace{-1.25cm}
-
 \begin{center}
-  \duree{1 heures} \total{30 points} \coefficient{2}
-  \brouillon \recherche \copieseparee{1}
+\duree{2 heures} 
+\total{50 points}
+\coefficient{4}
+\calculatrice{1}
+\brouillon
+\recherche 
+\copieseparee{1}
 \end{center}
+
+\begin{exercicedevoir}[5][Consigne.]
+\end{exercicedevoir}
 
 \end{document}
 
