--- a/Sixieme/S03-Operations-decimaux/FA-01-S03-Additions-decimales.tex
+++ b/Sixieme/S03-Operations-decimaux/FA-01-S03-Additions-decimales.tex
@@ -13,12 +13,39 @@
 
 \begin{document}
 
-\section{Partie 1}
+\section*{Instructions}
+Réalisez les additions suivantes en utilisant les propriétés des nombres décimaux.
 
-\begin{exercice}[1][Consigne]
-  \begin{enu}
-    \item item 1
-  \end{enu}
-\end{exercice}
+\begin{multicols}{3}
+\begin{enumerate}
+    % Facile : pas de retenue
+    \item \monaddition{45,08}{1,7}
+    \item \monaddition{12,3}{2,6}
+    \item \monaddition{7,45}{1,5}
+    \item \monaddition{3,2}{4,5}
+    \item \monaddition{10,1}{5,9}
+
+    % Moyen : avec retenue
+    \item \monaddition{23,75}{6,85}
+    \item \monaddition{14,6}{7,75}
+    \item \monaddition{8,9}{3,6}
+    \item \monaddition{15,9}{8,4}
+    \item \monaddition{25,1}{3,9}
+
+    % Difficile : plusieurs chiffres après la virgule
+    \item \monaddition{45,678}{2,345}
+    \item \monaddition{12,543}{7,89}
+    \item \monaddition{31,567}{4,2}
+    \item \monaddition{78,9}{15,876}
+    \item \monaddition{100,001}{23,456}
+
+    % Très difficile : addition de plusieurs nombres
+    \item \monaddition{99,999}{0,001}
+    \item \monaddition{20,5}{30,45}
+    \item \monaddition{1,234}{2,345}
+    \item \monaddition{10,111}{20,222}
+    \item \monaddition{0,123}{0,456}
+\end{enumerate}
+\end{multicols}
 
 \end{document}
