--- a/Sixieme/S04-Cercle/00.FM-S04-Cercles.tex
+++ b/Sixieme/S04-Cercle/00.FM-S04-Cercles.tex
@@ -56,9 +56,10 @@ Ce sera toujours \textbf{le} centre et \textbf{une} corde.
 
 \newpage
 
+
 \section{Tracer un cercle}
 
-
+\section{Programme de construction}
 
 
 \end{document}
