--- a/Terminale/S04-Derivation/11.FA-01-S04-Evaluation-fonction.tex
+++ b/Terminale/S04-Derivation/11.FA-01-S04-Evaluation-fonction.tex
@@ -15,7 +15,7 @@
 
 \section{Fonctions affines}
 
-\begin{exercice}[0][Exercice corrigÃ©.]
+\begin{exercice}[0][Exercice corrigé.]
 \textbf{Soit $f: x \longmapsto 6x+4$. \\ Quelle est l'image de $1$ ?}
 \\
 Correction :\\
