--- a/Terminale/S04-Derivation/13.FA-03-S04-Tableaux-variations-affines.tex
+++ b/Terminale/S04-Derivation/13.FA-03-S04-Tableaux-variations-affines.tex
@@ -4,7 +4,7 @@
 %% Load the custom package
 \usepackage{Mathdoc}
 
-%% NumÃ©ro de sÃ©quence %% Titre de la sÃ©quence %%
+%% Numéro de sÃ©quence %% Titre de la sÃ©quence %%
 \renewcommand{\centerhead}{Chap. 4 : Tableau de variation}
 
 %% Spacing commands %%
@@ -13,7 +13,7 @@
 
 \begin{document}
 
-\begin{exercice}[0][Exercice corrigé.]
+\begin{exercice}[0][Exercice corrigé]
 \textbf{Dresser le tableau de signes de la fonction $f$ définie sur  $\mathbb
 R$ par $f(x)=5x-4$, \\ sachant que $f(\dfrac{4}{5})=0$ ?} \\ \\
 Le coefficient directeur de la fonction est $a=5$. \\
@@ -27,7 +27,7 @@ On obtient le tableau de variation suivant :
 \end{center}
 \end{exercice}
 
-\begin{exercice}[1][Tableau de variations en connaissant la racine.]
+\begin{exercice}[1][Tableau de variations en connaissant la racine]
 \textbf{Dresser le tableau de signes de la fonction $f$ définie sur  $\mathbb
 R$ par $f(x)=10x-5$, \\ sachant que $f(\dfrac{1}{2})=0$ ?} \\ \\
 Le coefficient directeur de la fonction est \ldots\ldots\ldots\ldots \\
@@ -41,7 +41,7 @@ On obtient le tableau de variation suivant :
 \end{center}
 \end{exercice}
 
-\begin{exercice}[1][Tableau de variations en connaissant la racine.]
+\begin{exercice}[1][Tableau de variations en connaissant la racine]
 \textbf{Dresser le tableau de signes de la fonction $f$ définie sur  $\mathbb
 R$ par $f(x)=-3x+6$, \\ sachant que $f(2)=0$ ?} \\ \\
 Le coefficient directeur de la fonction est \ldots\ldots\ldots\ldots \\
@@ -57,7 +57,7 @@ On obtient le tableau de variation suivant :
 
 %\newpage
 
-\begin{exercice}[0][Exercice corrigé.]
+\begin{exercice}[0][Exercice corrigé]
 Résoudre l'équation suivante. \\
 $6x+8=0$\\
 $6x=-8$ \\
@@ -66,7 +66,7 @@ $x=\dfrac{-4}{3}$\\
 La solution de l'équation $6x+8=0$ est $x_0=-\dfrac{4}{3}$.
 \end{exercice}
 
-\begin{exercice}[1][Résoudre les équations suivantes.]
+\begin{exercice}[1][Résoudre les équations suivantes]
 \begin{multicols}{2}
 \begin{enumerate}
 \item $-7x-12=0$ \\ \\ \encart{3cm}
@@ -77,7 +77,7 @@ La solution de l'équation $6x+8=0$ est $x_0=-\dfrac{4}{3}$.
 \end{multicols}
 \end{exercice}
 
-\begin{exercice}[2][Résoudre les équations suivantes.]
+\begin{exercice}[2][Résoudre les équations suivantes]
 \begin{multicols}{2}
 \begin{enumerate}
 \item $7x+3=10x-8$ \\ \\ \encart{4cm}
@@ -88,7 +88,7 @@ La solution de l'équation $6x+8=0$ est $x_0=-\dfrac{4}{3}$.
 
 %\newpage
 
-\begin{exercice}[0][Exercice corrigé.]
+\begin{exercice}[0][Exercice corrigé]
 \textbf{Dresser le tableau de signes de la fonction $f$ définie sur  $\mathbb
 R$ par $f(x)=2x-5$ ?} \\
 On résoud : $2x-5=0$ $\iff$ $2x=5$ $\iff$ $x=\dfrac{5}{2}$ \\
@@ -103,7 +103,7 @@ On dresse le tableau de variation suivant :
 \end{center}
 \end{exercice}
 
-\begin{exercice}[1][Dresser un tableau de variation.]
+\begin{exercice}[1][Dresser un tableau de variation]
 \textbf{Dresser le tableau de signes de la fonction $f$ définie sur  $\mathbb
 R$ par $f(x)=-x+4$ ?} \\
 \dtf \\ \dtf \\ \dtf \\ \dtf \\ \dtf
@@ -116,7 +116,8 @@ R$ par $f(x)=-x+4$ ?} \\
 \end{exercice}
 
 \begin{multicols}{2}
-\begin{exercice}[2][Dresser un tableau de variation.]
+
+\begin{exercice}[2][Dresser un tableau de variation]
 \textbf{Dresser le tableau de signes de la fonction $f$ définie sur  $\mathbb
 R$ par \\ $f(x)=12x+8$} \\
 \dtf \\ \dtf \\ \dtf \\ \dtf \\ \dtf \\ \dtf
@@ -128,7 +129,7 @@ R$ par \\ $f(x)=12x+8$} \\
 \end{center}
 \end{exercice}
 
-\begin{exercice}[2][Dresser un tableau de variation.]
+\begin{exercice}[2][Dresser un tableau de variation]
 \textbf{Dresser le tableau de signes de la fonction $f$ définie sur  $\mathbb
 R$ par \\ $f(x)=-3x-6$} \\
 \dtf \\ \dtf \\ \dtf \\ \dtf \\ \dtf  \\ \dtf
@@ -141,7 +142,7 @@ R$ par \\ $f(x)=-3x-6$} \\
 \end{exercice}
 \end{multicols}
 
-\begin{exercice}[2][\underline{Sur le cahiers}, dresser les tableaux de signes.]
+\begin{exercice}[2][\underline{Sur le cahiers}, dresser les tableaux de signes]
 \begin{multicols}{2}
 \begin{enumerate}
 \item  $f(x)=2x-4$ 
@@ -154,7 +155,7 @@ R$ par \\ $f(x)=-3x-6$} \\
 \end{multicols}
 \end{exercice}
 
-\begin{exercice}[3][\underline{Sur le cahiers}, dresser les tableaux de signes.]
+\begin{exercice}[3][\underline{Sur le cahiers}, dresser les tableaux de signes]
 \begin{multicols}{2}
 \begin{enumerate}
 	\item  $f(x)=-\dfrac{10}{9}x+4$
@@ -167,7 +168,7 @@ R$ par \\ $f(x)=-3x-6$} \\
 \end{multicols}
 \end{exercice}
 
-\begin{exercice}[2][Tableaux de signes à partir d'un graphique.]
+\begin{exercice}[2][Tableaux de signes à partir d'un graphique]
 \begin{multicols}{2}
 \begin{enumerate}[itemsep=1em]
 	\item \begin{minipage}[t]{\linewidth} Dresser le tableau de signes de la fonction $f$ représentée ci-dessous.\\\begin{tikzpicture}[baseline,scale = 0.6]
