--- a/Premiere/S05-Suites/Ex-1a-S05-Explicites.tex
+++ b/Premiere/S05-Suites/Ex-1a-S05-Explicites.tex
@@ -1,10 +1,11 @@
+\begin{header}
+
 %% Font size %%
 \documentclass[11pt]{article}
 
 %% Load the custom package
 \usepackage{Mathdoc}
 
-\begin{header}
 %% Numéro de séquence %% Titre de la séquence %%
 \renewcommand{\centerhead}{}
 
@@ -15,7 +16,10 @@
 
 \begin{document}
 
+\section{Partie 1}
 
+\begin{exercice}[1][Consignes]
 
+\end{exercice}
 
 \end{document}
