--- a/Premiere/S05-Suites/Cours-S05-Suites.tex
+++ b/Premiere/S05-Suites/Cours-S05-Suites.tex
@@ -102,7 +102,12 @@ $(u_n)$ croissante $\iff$ $u_{n+1}
 \end{definition}
 
 \begin{exemple}
-
+Considérons $(u_n)$ définie par :
+\[ \begin{cases}
+u_0 = 12 \\
+u_{n+1} = (u_n)^2 + u_n, \forall n
+\in \N
+\end{cases} \]
 \end{exemple}
 
 \begin{definition}[Suite strictement
