--- a/Premiere/S05-Suites/Ex-1a-S05-Explicites.tex
+++ b/Premiere/S05-Suites/Ex-1a-S05-Explicites.tex
@@ -1,5 +1,3 @@
-\begin{header}
-
 %% Font size %%
 \documentclass[11pt]{article}
 
@@ -7,19 +5,50 @@
 \usepackage{Mathdoc}
 
 %% Numéro de séquence %% Titre de la séquence %%
-\renewcommand{\centerhead}{}
+\renewcommand{\centerhead}{Chap. 5 : Suites - Formes explicites}
 
 %% Spacing commands %%
 \renewcommand{\baselinestretch}{1} \setlength{\parindent}{0pt}
 
-\end{header}
-
 \begin{document}
 
-\section{Partie 1}
+\begin{exercice}[1][Déterminer les valeurs d''un suite I]
+\begin{enumerate}
+	\item Soit $(u_n)$ une suite définie pour tout entier $n\in\mathbb{N}$ par $u_n =-8n-10$. \\Calculer $u_{12}$.
+	\item Soit $(u_n)$ une suite définie pour tout entier $n\in\mathbb{N}$ par $u_n =-8n+9$. \\Calculer $u_{20}$.
+	\item Soit $(u_n)$ une suite définie pour tout entier $n\in\mathbb{N}$ par $u_n =-3n+2$. \\Calculer $u_{9}$.
+	\item Soit $(u_n)$ une suite définie pour tout entier $n\in\mathbb{N}$ par $u_n =-2n-10$. \\Calculer $u_{7}$.
+\end{enumerate}
+\end{exercice}
 
-\begin{exercice}[1][Consignes]
+\begin{exercice}[1][Déterminer les valeurs d'une suite II]
+\begin{enumerate}
+	\item Soit $(u_n)$ une suite définie pour tout entier $n\in\mathbb{N}$ par 
+        $u_n = -3n^2-9n+6$  .\\Calculer $u_{4}$.
+	\item Soit $(u_n)$ une suite définie pour tout entier $n\in\mathbb{N}$ par 
+        $u_n = 3n^2-9n-2$  .\\Calculer $u_{7}$.
+	\item Soit $(u_n)$ une suite définie pour tout entier $n\in\mathbb{N}$ par 
+        $u_n = -2n^2+n-1$  .\\Calculer $u_{2}$.
+	\item Soit $(u_n)$ une suite définie pour tout entier $n\in\mathbb{N}$ par 
+        $u_n = -n^2+8n-7$  .\\Calculer $u_{9}$.
+\end{enumerate}
+\end{exercice}
 
+\begin{exercice}[2][Déterminer les valeurs d'une suite III]
+\begin{enumerate}
+	\item Soit $(u_n)$ une suite définie pour tout entier $n\in\mathbb{N}$ par 
+          $u_n =\dfrac{-4n-5}{3n+5} $.\\Calculer $u_{4}$. \\
+          Donner le résultat sous la forme d'une fraction irréductible ou d'un nombre entier.
+	\item Soit $(u_n)$ une suite définie pour tout entier $n\in\mathbb{N}$ par 
+          $u_n =\dfrac{5n-5}{2n+2} $.\\Calculer $u_{6}$. \\
+          Donner le résultat sous la forme d'une fraction irréductible ou d'un nombre entier.
+	\item Soit $(u_n)$ une suite définie pour tout entier $n\in\mathbb{N}$ par 
+          $u_n =\dfrac{-3n+1}{2n+3} $.\\Calculer $u_{3}$. \\
+          Donner le résultat sous la forme d'une fraction irréductible ou d'un nombre entier.
+	\item Soit $(u_n)$ une suite définie pour tout entier $n\in\mathbb{N}$ par 
+          $u_n =\dfrac{-n+5}{4n+4} $.\\Calculer $u_{8}$. \\
+          Donner le résultat sous la forme d'une fraction irréductible ou d'un nombre entier.
+\end{enumerate}
 \end{exercice}
 
 \end{document}
