--- a/Sixieme/S06-Perimetres/Cours-S06-Perimetres.tex
+++ b/Sixieme/S06-Perimetres/Cours-S06-Perimetres.tex
@@ -69,6 +69,33 @@ Ce principe de base ne fonctionne pas pour le temps. En effet, les
 secondes sont exprimées en base 60. 60 secondes donnent 1 minute, 60
 minutes donnent 1 heure, 24 heures donnent 1 journée \dots
 \end{remarque}
+
+\section{Unités de durée}
+
+\begin{propriete}
+On rappelle les égalités suivantes :
+\begin{itemize}
+\item 60 secondes = 1 minute
+\item 60 minutes = 1 heure
+\item 24 heures = 1 journée
+\item 365,25 jours = 1 an
+\item 100 ans = 1 siècle
+\item 1 000 ans = 1 millénnaire
+\end{itemize}
+\end{propriete}
+
+
+\begin{exemple}
+\phantom{0} \vspace{-.5cm}
+\begin{itemize}
+\item $4\text{ h} = 4 \times 60 \text{ min} = 240 \text{ min}$
+\item $20 \text{ min} = 20 \times 60 \text{ sec} = 1~200 \text{ sec}$
+\item $7 \text{ j} = 7 \times 24 \text{ h} = 168 \text{ h}$
+\end{itemize}
+\end{exemple}
+
+
+
 \section{Périmètre d'une figure}
 
 \begin{vocabulaire}
