--- a/Cinquieme/S06-Relatifs-II-Operations/Cours-S06-Operation-sur-les-relatifs.tex
+++ b/Cinquieme/S06-Relatifs-II-Operations/Cours-S06-Operation-sur-les-relatifs.tex
@@ -17,7 +17,7 @@
 \section{Rappels}
 
 \begin{propriete}
-Un nombre relatif est formé d’un signe (+ ou −) et d’un nombre (sa distance à zéro).
+Un nombre relatif est formé d’un signe (+ ou -) et d’un nombre (sa distance à zéro).
 \end{propriete}
 
 \begin{definition}
@@ -26,8 +26,12 @@ signes différents, on dit que ces nombres sont opposés.
 \end{definition}
 
 \begin{exemple}
-
+$(+5)$ est un nombre positif \\
+$(-14)$ est un nombre négatif \\
+$18$ est un nombre positif \\
+L'opposé de $(-4)$ est $(+4)$
 \end{exemple}
+
 
 \section{Additions de relatifs}
 
