--- a/Premiere/S05-Suites/Cours-S05-Suites.tex
+++ b/Premiere/S05-Suites/Cours-S05-Suites.tex
@@ -270,6 +270,25 @@ Soit $(u_n)$ une suite géométrique de raison $q \neq 1$. Les points de
 sa représentation graphique ne sont pas alignés.
 \end{propriete}
 
+\subsection{Déterminer la raison}
+
+\begin{definition}{Nombre de termes.}
+étant donné $n_1$ et $n_2$ deux rangs de la suite, on détermine le
+nombre de termes entre ces rangs par : $k=n_2-n_1$
+\end{definition}
+
+\begin{propriete}
+Soit $(u_n)$ une suite arithmétique, étant donné $n_1$ et $n_2$ deux
+rangs de la suite tels que $u_{n_1}=a$ et $u_{n_2}=b$, on  à :
+\[ r = \dfrac{u_{n_2}-u_{n_1}}{n_2-n_1}\]
+\end{propriete}
+
+\begin{propriete}
+Soit $(u_n)$ une suite géométrique, étant donné $n_1$ et $n_2$ deux
+termes de la suite tels que $u_{n_1}=a$ et $u_{n_2}=b$, on  à :
+\[ q = \sqrt[n_{2}-n_{1}]{\dfrac{b}{a}} = \left( \dfrac{b}{a} \right)^{\dfrac{1}{n_2-n_1}}\]
+\end{propriete}
+
 
 \subsection{Suites  arithmético-géométriques}
 
